# urikv

./: .gitignore  README.md  pyproject.toml  urikv.kv.markpact.md  urikv.log.markpact.md
data/: events.jsonl
markpacts/: urikv-kv.markpact.md  urikv-log.markpact.md
tests/: test_urikv.py
urikv/: handlers.py  log_handlers.py  manifest.yaml  routes.py
